😻Update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@
 name: sub-web CI
 on:
   push:
-    branches:
+    分支:
       - master:
 
 jobs: # 构建的任务，一个工作流有多个构建任务，
@@ -30,12 +30,12 @@ jobs: # 构建的任务，一个工作流有多个构建任务，
         uses: easingthemes/ssh-deploy@v4.1.10
         with:
       # Private key part of an SSH key pair
-        SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
+          SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
       # Remote host
-        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
       # Remote user
-        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
       # Source directory, path relative to `$GITHUB_WORKSPACE` root, eg: `dist/`
-        SOURCE: `/dist`
+          SOURCE: "/dist"
       # Target directory
-        TARGET: `root`
+          TARGET: "root"
