--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs: # 构建的任务，一个工作流有多个构建任务，
     steps: # 构建任务的步骤，一个任务可分为多个步骤
       # 切换分支
       - name: Checkout
-        uses: actions/checkout@2
+        uses: actions/checkout@v4
       # 步骤2 给当前服务器安装node
       - name: use node
         uses: actions/setup-node@v2
