🐱Update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 # 当前工作流的名称
-name: sub-web CI
+name: sub-web-deploy
 on:
   push:
-    分支:
-      - master:
+    branches:
+      - master
 
 jobs: # 构建的任务，一个工作流有多个构建任务，
   build-and-deploy:
@@ -25,10 +25,10 @@ jobs: # 构建的任务，一个工作流有多个构建任务，
       # 步骤4 打包node项目
       - name: build
         run: yarn build
-      # 步骤5 部署项目
+      # 步骤5 部署项目到服务器
       - name: ssh deploy
         uses: easingthemes/ssh-deploy@v4.1.10
-        with:
+        env:
       # Private key part of an SSH key pair
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       # Remote host
