--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,4 @@ jobs: # 构建的任务，一个工作流有多个构建任务，
       # Source directory, path relative to `$GITHUB_WORKSPACE` root, eg: `dist/`
           SOURCE: "/dist/"
       # Target directory
-          TARGET: "/data/docker_data/npm/data/sub.ven2s.cn/;
-"
+          TARGET: "/data/docker_data/npm/data/sub.ven2s.cn/"
