更换域名*.luvsia.com

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,6 @@ jobs: # 构建的任务，一个工作流有多个构建任务，
       # Source directory, path relative to `$GITHUB_WORKSPACE` root, eg: `dist/`
           SOURCE: "/dist/"
       # Script to run on host machine before rsync
-          SCRIPT_BEFORE: "mkdir -p /data/docker_data/npm/data/sub.ven2s.cn"
+          SCRIPT_BEFORE: "mkdir -p /data/docker_data/npm/data/sub.luvsia.com"
       # Target directory
-          TARGET: "/data/docker_data/npm/data/sub.ven2s.cn/"
+          TARGET: "/data/docker_data/npm/data/sub.luvsia.com/"
